# tgshop

./: .gitignore  README.md  TODO.md  services.drawio
docker/: README.md  docker-compose.old.yml  docker-compose.yml
docker/dockerfiles/: backend  database  migration  proxy  reverse-proxy  worker
docker/dockerfiles/libs/: poetry
docker/entrypoints/: migration.sh
docker/envs/: .env  database  general
docker/healthchecks/: database.sh
docs/: DESC.md  README.md
scripts/: README.md  docker-build.sh  docker-reset.sh  docker-restart.sh  docker-up.sh
scripts/docker/: build.sh  unbuild.sh  up.sh
scripts/docker/unbuild/: containers.sh  folders.sh  images.sh  volumes.sh
services/: .env  README.md  docker-compose.yml
services/backend/: README.md  pyproject.toml
services/balancer/: pyproject.toml
services/database/: Dockerfile  README.md  mariadb.cnf
services/database/schema/: README.md
services/database/schema/sqlalchemy/: README.md  __init__.py  base.py  user.py
services/frontend/: pyproject.toml
services/migration/: alembic.ini  init.py  pyproject.toml  test.py
services/migration/alembic/: env.py
services/proxy/: README.md
services/proxy/config/: nginx.conf
services/reverse-proxy/: Dockerfile  nginx.conf
services/reverse-proxy/config/: nginx.conf
services/worker/: pyproject.toml
services/workers-balancer/: pyproject.toml
